src/snapshots/treelox__parser__tests__grouping.snap
---
source: src/parser.rs
expression: parser.parse()
---
Ok(
    [
        Expression {
            expr: Binary {
                left: Grouping {
                    expr: Binary {
                        left: Literal {
                            value: Number(
                                5.0,
                            ),
                        },
                        operator: Token {
                            type: Minus,
                            lexeme: "-",
                            literal: None,
                            line: 1,
                        },
                        right: Literal {
                            value: Number(
                                3.0,
                            ),
                        },
                    },
                },
                operator: Token {
                    type: Star,
                    lexeme: "*",
                    literal: None,
                    line: 1,
                },
                right: Literal {
                    value: Number(
                        4.0,
                    ),
                },
            },
        },
    ],
)
