src/snapshots/treelox__parser__tests__parse_false.snap
---
source: src/parser.rs
expression: parser.parse()
---
Some(
    Literal {
        value: Bool(
            false,
        ),
    },
)
