src/snapshots/treelox__parser__tests__parse_nil.snap
---
source: src/parser.rs
expression: parser.parse()
---
Some(
    Literal {
        value: Nil,
    },
)
