src/snapshots/treelox__parser__tests__parse_true.snap
---
source: src/parser.rs
expression: parser.parse()
---
Ok(
    [
        Expression {
            expr: Literal {
                value: Bool(
                    true,
                ),
            },
        },
    ],
)
